--- a/shellfinal/makefile
+++ b/shellfinal/makefile
@@ -1,7 +1,7 @@
 output: shell.o
 	gcc -o output shell.o
 
-codigonovo7.o: shell.c
+shell.o: shell.c
 	gcc -c shell.c -W -Wall -ansi -pedantic
 
 clean: rm *.o output
