--- a/shellfinal/makefile
+++ b/shellfinal/makefile
@@ -2,6 +2,6 @@ output: shell.o
 	gcc -o output shell.o
 
 shell.o: shell.c
-	gcc -c shell.c -W -Wall -ansi -pedantic
+	gcc -c shell.c -W -Wall -pedantic
 
 clean: rm *.o output
